--- a/src/assets/styles/Project.scss
+++ b/src/assets/styles/Project.scss
@@ -30,6 +30,12 @@
     transform: scale(1.05);
 }
 
+// .project { 
+//     display: flex;
+//     flex-direction: column;
+//     justify-content: space-between;
+// }
+
 @media screen {
     @media (max-width: 700px) {
         .projects-container {
