removed properties causing image layout shift

--- a/src/assets/styles/Main.scss
+++ b/src/assets/styles/Main.scss
@@ -13,8 +13,8 @@
     background-image: url("../images/bg-dark.webp");
     background-repeat: no-repeat;
     background-size: cover;
-    background-attachment: fixed;
-    background-position: center;
+    // background-attachment: fixed;
+    // background-position: center;
 }
 
 .about-section .content {
